--- a/src/Exercises/Exercise2/index.html
+++ b/src/Exercises/Exercise2/index.html
@@ -14,4 +14,6 @@
     <div id="lower" class="half">
     </div>
   </body>
+  <script type="module" src="./scene1.js"></script>
+  <script type="module" src="./scene2.js"></script>
 </html>
