Add: Exercise 4 as option in exercises landing page.

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <li><a href="./Exercises/Exercise1/index.html">Exercise 1</a></li>
       <li><a href="./Exercises/Exercise2/index.html">Exercise 2</a></li>
       <li><a href="./Exercises/Exercise3/index.html">Exercise 3</a></li>
-      <!-- <li><a href="./Exercises/Exercise4.html">Exercise 4</a></li> -->
+      <li><a href="./Exercises/Exercise4/index.html">Exercise 4</a></li>
       <!-- <li><a href="./Exercises/Exercise5.html">Exercise 5</a></li> -->
       <!-- <li><a href="./Exercises/Exercise6.html">Exercise 6</a></li> -->
     </ul>
