--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <li><a href="./Exercises/Exercise3/index.html">Exercise 3</a></li>
       <li><a href="./Exercises/Exercise4/index.html">Exercise 4</a></li>
       <li><a href="./Exercises/Exercise5/index.html">Exercise 5</a></li>
-      <!-- <li><a href="./Exercises/Exercise6.html">Exercise 6</a></li> -->
+      <li><a href="./Exercises/Exercise6/index.html">Exercise 6</a></li>
     </ul>
   </body>
 </html>
