Mod: Modify all pages' title names

--- a/src/Exercises/Exercise3/index.html
+++ b/src/Exercises/Exercise3/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <title>Three.js - Custom BufferGeometry</title>
+    <title>Exercise 3</title>
     <style>
     html, body {
         height: 100%;
