--- a/src/Exercises/Exercise2/index.html
+++ b/src/Exercises/Exercise2/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My first three.js app</title>
+    <title>Exercise 2</title>
     <link rel="stylesheet" href="./styles/styles.css" />
     <style>
      body { margin: 0; }
